using renderChunk to avoid terser plugin conflict

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-test",
-  "version": "1.0.0",
+  "name": "rollup-plugin-global-umd",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
