--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/mohdovais/rollup-plugin-global-umd#readme",
   "license": "MIT",
-  "dependencies": {
-    "acorn": "^7.0.0"
+  "peerDependencies": {
+    "acorn": "7.x",
+    "rollup": "1.x"
   },
   "devDependencies": {
     "eslint": "^6.2.1",
